[gd_scene load_steps=18 format=3 uid="uid://d0pgk2elckrba"]

[ext_resource type="Script" path="res://src/Options/Options.gd" id="1_j15na"]
[ext_resource type="Script" path="res://src/Background/GameBg.gd" id="2_jxjkx"]
[ext_resource type="Texture2D" uid="uid://7834f2tredls" path="res://assets/Stall/backgroundEmpty.png" id="3_dioj4"]
[ext_resource type="Texture2D" uid="uid://dkavn4kowna50" path="res://assets/Stall/cloud1.png" id="4_htexq"]
[ext_resource type="Texture2D" uid="uid://bieqt6dt3lbgr" path="res://assets/Stall/cloud2.png" id="5_mcd0e"]
[ext_resource type="Texture2D" uid="uid://dplsxvkppwnls" path="res://assets/Stall/water2.png" id="6_eefgf"]
[ext_resource type="Texture2D" uid="uid://cdv8mxe1tlgrt" path="res://assets/Stall/water1.png" id="7_eyeii"]
[ext_resource type="Texture2D" uid="uid://d3gyjk2q3x5nm" path="res://assets/Stall/curtain.png" id="8_v1xqc"]
[ext_resource type="Texture2D" uid="uid://dnoy7k5ft36ek" path="res://assets/Stall/curtainTop.png" id="9_ebqwh"]
[ext_resource type="Texture2D" uid="uid://ckoc0hne808bv" path="res://assets/Stall/curtain_straight.png" id="10_1ubfa"]
[ext_resource type="Texture2D" uid="uid://d2a527rqetbnk" path="res://assets/Stall/bg_wood.png" id="11_x7704"]
[ext_resource type="FontFile" uid="uid://b64smw5j517u6" path="res://assets/Fonts/Frogie-Regular.ttf" id="12_gm2wb"]
[ext_resource type="Texture2D" uid="uid://pa1ygai8qb1a" path="res://assets/HUD/yellow_button02.png" id="13_70jdt"]

[sub_resource type="Animation" id="Animation_ocs4g"]
resource_name = "CurtainDown"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/CurtainTop1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.07, 0.1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2000)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control/CurtainTop2:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.07, 0.1),
"update": 0,
"values": [Vector2(3840, 64), Vector2(3840, 1000)]
}

[sub_resource type="Animation" id="Animation_8d43u"]
resource_name = "CurtainUp"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/CurtainTop1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2.07, 0.1),
"update": 0,
"values": [Vector2(0, 2000), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control/CurtainTop2:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2.07, 0.1),
"update": 0,
"values": [Vector2(3840, 1000), Vector2(3840, 64)]
}

[sub_resource type="Animation" id="Animation_5toi8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/CurtainTop1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control/CurtainTop2:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3840, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_byuhe"]
_data = {
"CurtainDown": SubResource("Animation_ocs4g"),
"CurtainUp": SubResource("Animation_8d43u"),
"RESET": SubResource("Animation_5toi8")
}

[node name="Options" type="Node2D"]
script = ExtResource("1_j15na")

[node name="Background" type="ParallaxBackground" parent="."]
script = ExtResource("2_jxjkx")
speed_water1 = Vector2(-2.5, 0)
speed_water2 = Vector2(-1.5, 0)

[node name="Background" type="ParallaxLayer" parent="Background"]

[node name="Sprite2D" type="TextureRect" parent="Background/Background"]
offset_right = 3840.0
offset_bottom = 2160.0
texture = ExtResource("3_dioj4")

[node name="Clouds" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2(3840, 0)

[node name="Cloud1" type="Sprite2D" parent="Background/Clouds"]
position = Vector2(100, 500)
texture = ExtResource("4_htexq")
centered = false

[node name="Cloud2" type="Sprite2D" parent="Background/Clouds"]
position = Vector2(638, 288)
texture = ExtResource("5_mcd0e")
centered = false

[node name="Cloud3" type="Sprite2D" parent="Background/Clouds"]
position = Vector2(1024, 464)
texture = ExtResource("4_htexq")
centered = false

[node name="Cloud4" type="Sprite2D" parent="Background/Clouds"]
position = Vector2(1516, 268)
texture = ExtResource("5_mcd0e")
centered = false

[node name="Cloud5" type="Sprite2D" parent="Background/Clouds"]
position = Vector2(1568, 592)
texture = ExtResource("5_mcd0e")
centered = false

[node name="Cloud6" type="Sprite2D" parent="Background/Clouds"]
position = Vector2(1960, 372)
texture = ExtResource("4_htexq")
centered = false

[node name="Cloud7" type="Sprite2D" parent="Background/Clouds"]
position = Vector2(2336, 480)
texture = ExtResource("5_mcd0e")
centered = false

[node name="Cloud8" type="Sprite2D" parent="Background/Clouds"]
position = Vector2(2544, 240)
texture = ExtResource("4_htexq")
centered = false

[node name="Cloud9" type="Sprite2D" parent="Background/Clouds"]
position = Vector2(2884, 436)
texture = ExtResource("5_mcd0e")
centered = false

[node name="Cloud10" type="Sprite2D" parent="Background/Clouds"]
position = Vector2(3340, 260)
texture = ExtResource("5_mcd0e")
centered = false

[node name="Water2" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2(3840, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Water2"]
position = Vector2(100, 1330)
texture = ExtResource("6_eefgf")
centered = false

[node name="Water1" type="ParallaxLayer" parent="Background"]
z_index = 2
motion_mirroring = Vector2(3840, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Water1"]
position = Vector2(0, 1430)
texture = ExtResource("7_eyeii")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Curtain1" type="TextureRect" parent="CanvasLayer/Control"]
z_index = 4
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -1080.0
offset_right = 665.0
offset_bottom = 1080.0
grow_vertical = 2
texture = ExtResource("8_v1xqc")

[node name="Curtain2" type="TextureRect" parent="CanvasLayer/Control"]
z_index = 4
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -665.0
offset_top = -1080.0
offset_bottom = 1080.0
grow_horizontal = 0
grow_vertical = 2
rotation = -0.00121955
texture = ExtResource("8_v1xqc")
flip_h = true

[node name="CurtainTop2" type="TextureRect" parent="CanvasLayer/Control"]
z_index = 10
layout_mode = 0
offset_right = 3840.0
offset_bottom = 64.0
scale = Vector2(1, 2)
mouse_filter = 2
texture = ExtResource("9_ebqwh")

[node name="CurtainTop1" type="TextureRect" parent="CanvasLayer/Control"]
z_index = 10
layout_mode = 0
offset_right = 3840.0
offset_bottom = 79.0002
scale = Vector2(1, 2)
mouse_filter = 2
texture = ExtResource("10_1ubfa")
expand_mode = 5

[node name="Floor" type="TextureRect" parent="CanvasLayer/Control"]
z_index = 2
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1920.0
offset_top = -512.0
offset_right = 1920.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 2)
texture = ExtResource("11_x7704")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -507.5
offset_top = -680.0
offset_right = 507.5
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 125
alignment = 1

[node name="Title" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0.392157, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 256
text = "OPTIONS:"
horizontal_alignment = 1

[node name="Master" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/Master"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0.392157, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 72
text = "Master Volume: 100"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/Master"]
layout_mode = 2

[node name="MasterSlider" type="HSlider" parent="CanvasLayer/Control/VBoxContainer/Master/CenterContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
rounded = true

[node name="Music" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/Music"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0.392157, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 72
text = "MUSIC Volume: 100"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/Music"]
layout_mode = 2

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/Control/VBoxContainer/Music/CenterContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2

[node name="SFX" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/SFX"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0.392157, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 72
text = "SFX Volume: 100"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer/SFX"]
layout_mode = 2

[node name="SfxSlider" type="HSlider" parent="CanvasLayer/Control/VBoxContainer/SFX/CenterContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="AutoReload" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("13_70jdt")

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/Buttons/AutoReload"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 70
text = "Auto Reload: On"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("13_70jdt")

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/Buttons/Reset"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 70
text = "CLEAR SAVE DATA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("13_70jdt")

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 96
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Warning" type="PanelContainer" parent="CanvasLayer/Control"]
visible = false
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Warning"]
layout_mode = 2
size_flags_vertical = 4

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Control/Warning/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/Control/Warning/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0.392157, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 96
text = "WARNING!"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/Control/Warning/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label2" type="Label" parent="CanvasLayer/Control/Warning/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0.392157, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 48
text = "This option will reset your options and statistics. use this with caution.
are you sure you want to continue?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/Control/Warning/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 50

[node name="Yes" type="TextureButton" parent="CanvasLayer/Control/Warning/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("13_70jdt")

[node name="Label" type="Label" parent="CanvasLayer/Control/Warning/VBoxContainer/Yes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 98
text = "YES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="CanvasLayer/Control/Warning/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 25

[node name="No" type="TextureButton" parent="CanvasLayer/Control/Warning/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("13_70jdt")

[node name="Label" type="Label" parent="CanvasLayer/Control/Warning/VBoxContainer/No"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_gm2wb")
theme_override_font_sizes/font_size = 98
text = "NO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_byuhe")
}

[connection signal="drag_ended" from="CanvasLayer/Control/VBoxContainer/Master/CenterContainer/MasterSlider" to="." method="_on_master_slider_drag_ended"]
[connection signal="drag_ended" from="CanvasLayer/Control/VBoxContainer/Music/CenterContainer/MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_ended" from="CanvasLayer/Control/VBoxContainer/SFX/CenterContainer/SfxSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Buttons/AutoReload" to="." method="_on_auto_reload_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Buttons/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Warning/VBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Warning/VBoxContainer/No" to="." method="_on_no_pressed"]
